finish cards, and output dynamic data (img, title, body)

--- a/src/index.scss
+++ b/src/index.scss
@@ -99,3 +99,10 @@ select {
   background-color: #ccc;
   border-radius: .5rem;
 }
+
+
+.container {
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+}
