--- a/src/components/CardItem/cardItem.module.scss
+++ b/src/components/CardItem/cardItem.module.scss
@@ -1,9 +1,9 @@
 .card_item {
   position: relative;
-  width: calc(100% / 3 - 1.5rem);
-  min-height: 300px;
-  height: auto;
-  padding: 2rem;
+  // width: calc(100% / 3 - 1.5rem);
+  width: 100%;
+  min-height: 500px;
+  height: 100%;
   border: 1px solid #eaeaea;
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
   border-radius: 0.4rem;
@@ -13,5 +13,24 @@
 
   &:hover {
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.2);
+  }
+  p {
+    font-weight: 400;
+    font-style: normal;
+    font-size: clamp(18px, 2vw, 28px);
+    margin: 1.5rem 0;
+  }
+}
+
+
+@media (min-width: 760px) {
+  .card_item {
+    width: calc(100% / 2 - 1.5rem);
+  }
+}
+
+@media (min-width: 992px) {
+  .card_item {
+    width: calc(100% / 3 - 1.5rem);
   }
 }
