--- a/src/components/CardList/cardList.module.scss
+++ b/src/components/CardList/cardList.module.scss
@@ -7,6 +7,21 @@
   width: 100%;
 }
 
+.item_content {
+  padding: 1rem 2rem 2rem;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.item_img {
+  border-radius: .4rem .4rem 0 0;
+  max-width: 100%;
+}
+
 .result {
   margin: 2rem 0;
   font-style: normal;
@@ -23,8 +38,6 @@
   align-items: center;
   column-gap: .7rem;
   cursor: pointer;
-  position: absolute;
-  bottom: 2rem;
   text-decoration: none;
   color: #363636;
 
