--- a/src/components/Form/form.module.scss
+++ b/src/components/Form/form.module.scss
@@ -1,12 +1,24 @@
 .form_label {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 100%;
   span {
     font-style: normal;
     font-weight: 600;
     font-size: clamp(14px, 1.7vw, 16px);
     line-height: 100%;
+  }
+}
+
+@media (min-width: 760px) {
+  .form_label {
+    width: 75%;
+  }
+}
+
+@media (min-width: 992px) {
+  .form_label {
+    width: 50%;
   }
 }
 
