--- a/src/pages/CardDetail/cardDetail.module.scss
+++ b/src/pages/CardDetail/cardDetail.module.scss
@@ -1,10 +1,12 @@
 .card_body {
-  width: 95%;
+  width: 100%;
   padding: 3rem;
   border: 1px solid #eaeaea;
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
   border-radius: 0.4rem;
-  margin: 4rem auto 0 auto;
+  margin: 5rem auto 0 auto;
+
+  background-color: #fff;
 
   p {
     font-weight: 400;
@@ -22,14 +24,25 @@
 
 .card_detail {
   width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.card_wrapper {
+  width: 100%;
   height: 100vh;
-  overflow-y: hidden;
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
 
 .back_btn_link {
+  position: absolute;
+  bottom: 0;
   display: flex;
   align-items: center;
   column-gap: 0.5rem;
@@ -45,4 +58,19 @@
   transform: rotate(180deg);
   display: flex;
   align-items: center;
+}
+
+.card_bg {
+  width: 100%;
+  height: 200px;
+
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
