--- a/src/components/CardList/cardList.module.scss
+++ b/src/components/CardList/cardList.module.scss
@@ -10,7 +10,7 @@
 .item_content {
   padding: 1rem 2rem 2rem;
   width: 100%;
-  height: 500px;
+  height: 450px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -20,6 +20,8 @@
 .item_img {
   border-radius: .4rem .4rem 0 0;
   max-width: 100%;
+  width: 100%;
+  height: 200px;
 }
 
 .result {
@@ -50,4 +52,8 @@
     font-size: clamp(14px, 1.7vw, 16px);
     line-height: 150%;
   }
+}
+
+.highlight {
+  background: #FFF619;
 }
